tests/ui/codegen/evm-ir/validation/raw_push.evmir
//~? ERROR: EVM IR verification failed: block 0: `push1` must carry an encoded push value
@module module

bb0:
  push1
  stop
